<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="team_name" type="id"/>
    <item name="team_badge" type="id"/>

    <item name="home_team_name" type="id"/>
    <item name="away_team_name" type="id"/>

    <item name="home_team_score" type="id"/>
    <item name="away_team_score" type="id"/>

    <item name="match_date" type="id"/>
    <item name="list_league" type="id"/>
    <item name="et_search" type="id"/>
    <item name="btn_search" type="id"/>
    <item name="list_search" type="id"/>


</resources>