<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
                 android:id="@+id/main_container"
                 android:layout_above="@+id/bottom_layout"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </FrameLayout>

    <LinearLayout android:id="@+id/bottom_layout" android:layout_alignParentBottom="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
    >
        <View android:layout_width="match_parent" android:layout_height="4dp" android:background="@drawable/shadow"/>
        <android.support.design.widget.BottomNavigationView android:layout_width="match_parent"
                                                            android:layout_height="wrap_content"
                                                            android:id="@+id/bottom_navigation" app:itemBackground="@android:color/white"
                                                            app:itemIconTint="@drawable/nav_item_color_state"
                                                            app:itemTextColor="@drawable/nav_item_color_state"
                                                            app:menu="@menu/bottom_navigation_menu"/>
    </LinearLayout>

</RelativeLayout>